--- a/index.html
+++ b/index.html
@@ -14,45 +14,52 @@
 		 <li><a href="1er\kah\4.html">صفحة فرعية 4</a></li>
         <li><a href="1er\kah\5.html">صفحة فرعية 5</a></li>
         <li><a href="1er\kah\6.html">صفحة فرعية 6</a></li>
-		 <li><a href="page1.html">صفحة فرعية 7</a></li>
-        <li><a href="page2.html">صفحة فرعية 8</a></li>
-        <li><a href="page3.html">صفحة فرعية 9</a></li>
-		 <li><a href="page1.html">صفحة فرعية 10</a></li>
-        <li><a href="page2.html">صفحة فرعية 11</a></li>
-        <li><a href="page3.html">صفحة فرعية 12</a></li>
-		 <li><a href="page1.html">صفحة فرعية 13</a></li>
-        <li><a href="page2.html">صفحة فرعية 14</a></li>
-        <li><a href="page3.html">صفحة فرعية 15</a></li>
-		 <li><a href="page1.html">صفحة فرعية 16</a></li>
-        <li><a href="page2.html">صفحة فرعية 17</a></li>
-        <li><a href="page3.html">صفحة فرعية 18</a></li>
-		 <li><a href="page1.html">صفحة فرعية 19</a></li>
-        <li><a href="page2.html">صفحة فرعية 20</a></li>
-        <li><a href="page3.html">صفحة فرعية 21</a></li>
-		 <li><a href="page1.html">صفحة فرعية 22</a></li>
-        <li><a href="page2.html">صفحة فرعية 23</a></li>
-        <li><a href="page3.html">صفحة فرعية 24</a></li>
-		 <li><a href="page1.html">صفحة فرعية 25</a></li>
-        <li><a href="page2.html">صفحة فرعية 26</a></li>
-        <li><a href="page3.html">صفحة فرعية 27</a></li>
-		 <li><a href="page1.html">صفحة فرعية 28</a></li>
-        <li><a href="page2.html">صفحة فرعية 29</a></li>
-        <li><a href="page3.html">صفحة فرعية 30</a></li>
-		 <li><a href="page1.html">صفحة فرعية 31</a></li>
-        <li><a href="page2.html">صفحة فرعية 32</a></li>
-        <li><a href="page3.html">صفحة فرعية 33</a></li>
-		 <li><a href="page1.html">صفحة فرعية 34</a></li>
-        <li><a href="page2.html">صفحة فرعية 35</a></li>
-        <li><a href="page3.html">صفحة فرعية 36</a></li>
-		 <li><a href="page1.html">صفحة فرعية 37</a></li>
-        <li><a href="page2.html">صفحة فرعية 38</a></li>
-        <li><a href="page3.html">صفحة فرعية 39</a></li>
-		 <li><a href="page1.html">صفحة فرعية 40</a></li>
-        <li><a href="page2.html">صفحة فرعية 41</a></li>
-        <li><a href="page3.html">صفحة فرعية 42</a></li>
-		 <li><a href="page1.html">صفحة فرعية 43</a></li>
-        <li><a href="page2.html">صفحة فرعية 45</a></li>
-        <li><a href="page3.html">صفحة فرعية 46</a></li>
+		 <li><a href="1er\mad\1.html">madaحة فرعية 7</a></li>
+        <li><a href="1er\mad\2.html">صفحة فرعية 8</a></li>
+        <li><a href="1er\mad\3.html">صفحة فرعية 9</a></li>
+		 <li><a href="1er\mad\4.html">صفحة فرعية 10</a></li>
+        <li><a href="1er\mad\5.html">صفحة فرعية 11</a></li>
+        <li><a href="1er\mad\distila\1.html">صفحة فرعية 12</a></li>
+		 <li><a href="1er\mad\matiar\2.html">صفحة فرعية 13</a></li>
+        <li><a href="1er\mad\matiar\2.html">صفحة فرعية 14</a></li>
+        <li><a href="1er\mad\matiar2\3.html">صفحة فرعية 15</a></li>
+		 <li><a href="1er\opt\1.html">op صفحة فرعية 16</a></li>
+        <li><a href="2eme\mad\1.html">2eme madaصفحة فرعية 17</a></li>
+        <li><a href="2eme\mad\2.html">صفحة فرعية 18</a></li>
+		 <li><a href="2eme\mad\3.html">صفحة فرعية 19</a></li>
+        <li><a href="2eme\mad\4.html">صفحة فرعية 20</a></li>
+        <li><a href="2eme\mad\5.html">صفحة فرعية 21</a></li>
+		 <li><a href="2eme\mag\1.html">mag صفحة فرعية 22</a></li>
+        <li><a href="2eme\mag\2.html">صفحة فرعية 23</a></li>
+        <li><a href="2eme\mag\3.html">صفحة فرعية 24</a></li>
+		 <li><a href="2eme\mag\4.html">صفحة فرعية 25</a></li>
+        <li><a href="2eme\mag\5.html">صفحة فرعية 26</a></li>
+        <li><a href="2eme\mecan\1\1.html">mecan صفحة فرعية 27</a></li>
+		 <li><a href="2eme\mecan\2\2.html">صفحة فرعية 28</a></li>
+        <li><a href="2eme\mecan\3\3.html">صفحة فرعية 29</a></li>
+        <li><a href="2eme\mecan\4\4.html">صفحة فرعية 30</a></li>
+		 <li><a href="2eme\mecan\5\5.html">صفحة فرعية 31</a></li>
+        <li><a href="3eme\mad\1.html">3eme mada صفحة فرعية 32</a></li>
+        <li><a href="3eme\mad\2.html">صفحة فرعية 33</a></li>
+		 <li><a href="3eme\mad\3.html">صفحة فرعية 34</a></li>
+        <li><a href="3eme\mad\4.html">صفحة فرعية 35</a></li>
+        <li><a href="3eme\mad\5.html">صفحة فرعية 36</a></li>
+		 <li><a href="3eme\mad\6.html">صفحة فرعية 37</a></li>
+        <li><a href="3eme\kah\1.html">3eme kah صفحة فرعية 38</a></li>
+        <li><a href="3eme\energ\1.html">3eme energ صفحة فرعية 39</a></li>
+		 <li><a href="3eme\energ\2.html">صفحة فرعية 40</a></li>
+        <li><a href="3eme\energ\3.html">صفحة فرعية 41</a></li>
+        <li><a href="3eme\opt\1.html">3eme opt صفحة فرعية 42</a></li>
+		 <li><a href="3eme\opt\2.html">صفحة فرعية 43</a></li>
+        <li><a href="3eme\opt\3.html">صفحة فرعية 45</a></li>
+        <li><a href="3eme\opt\4.html">صفحة فرعية 46</a></li>
+		<li><a href="4eme\kah\1.html">4eme kah صفحة فرعية 46</a></li>
+        <li><a href="4eme\kah\2.html">صفحة فرعية 46</a></li>
+        <li><a href="4.html">صفحة فرعية 46</a></li>
+        <li><a href="4.html">صفحة فرعية 46</a></li>
+
+		
+		
 		
     </ul>
 </body>
